--- a/index.html
+++ b/index.html
@@ -50,14 +50,14 @@
         <div class="d-flex flex-column justify-content-center p-3 col-lg-7">
           <p class="lead mb-0">I throw myself down among the tall grass by the trickling stream; and, as I lie close to the earth, a thousand unknown plants are noticed by me: when I hear the buzz of the little world among the stalks, and grow familiar with the countless indescribable forms of the insects and flies, then I feel the presence of the Almighty, who formed us in his own image, and the breath of that universal love.</p>
         </div>
-        <div class="p-0 col-lg-5"> <img class="img-fluid d-block" src="exo de classe/téléchargement (1).jpg"> </div>
+        <div class="p-0 col-lg-5"> <img class="img-fluid d-block" src="téléchargement (1).jpg"> </div>
       </div>
     </div>
   </div>
   <div class="py-5">
     <div class="container">
       <div class="row">
-        <div class="p-0 col-lg-5 order-2 order-lg-1"> <img class="img-fluid d-block" src="exo de classe/images.jpg"> </div>
+        <div class="p-0 col-lg-5 order-2 order-lg-1"> <img class="img-fluid d-block" src="images.jpg"> </div>
         <div class="d-flex flex-column justify-content-center p-3 col-lg-7 order-1 order-lg-2">
           <p class="lead mb-0">I should be incapable of drawing a single stroke at the present moment; and yet I feel that I never was a greater artist than now. When, while the lovely valley teems with vapour around me, and the meridian sun strikes the upper surface of the impenetrable foliage of my trees, and but a few stray gleams steal into the inner sanctuary.</p>
         </div>
@@ -67,9 +67,9 @@
   <div class="py-5">
     <div class="container">
       <div class="row">
-        <div class="col-md-4 col-6 p-3"> <img class="img-fluid d-block" src="exo de classe/images (2).jpg"> </div>
-        <div class="col-md-4 col-6 p-3"> <img class="img-fluid d-block" src="exo de classe/images (4).jpg"> </div>
-        <div class="p-3 col-md-4 col-6"> <img class="img-fluid d-block" src="exo de classe/téléchargement.jpg"> </div>
+        <div class="col-md-4 col-6 p-3"> <img class="img-fluid d-block" src="images (2).jpg"> </div>
+        <div class="col-md-4 col-6 p-3"> <img class="img-fluid d-block" src="images (4).jpg"> </div>
+        <div class="p-3 col-md-4 col-6"> <img class="img-fluid d-block" src="téléchargement.jpg"> </div>
       </div>
     </div>
   </div>
